<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/search"
            android:textColor="#009688" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyDialogFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/clear_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>